--- a/sps_path.lpi
+++ b/sps_path.lpi
@@ -30,21 +30,27 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="4">
+    <RequiredPackages Count="6">
       <Item1>
-        <PackageName Value="SynEdit"/>
+        <PackageName Value="bgracontrols"/>
       </Item1>
       <Item2>
-        <PackageName Value="ImagesForLazarus"/>
+        <PackageName Value="lazmouseandkeyinput"/>
       </Item2>
       <Item3>
-        <PackageName Value="bgrabitmappack"/>
+        <PackageName Value="SynEdit"/>
       </Item3>
       <Item4>
-        <PackageName Value="LCL"/>
+        <PackageName Value="ImagesForLazarus"/>
       </Item4>
+      <Item5>
+        <PackageName Value="bgrabitmappack"/>
+      </Item5>
+      <Item6>
+        <PackageName Value="LCL"/>
+      </Item6>
     </RequiredPackages>
-    <Units Count="7">
+    <Units Count="17">
       <Unit0>
         <Filename Value="sps_path.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -54,6 +60,7 @@
         <Filename Value="sps_main.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Sps_Editor"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="sps_main"/>
       </Unit1>
@@ -82,6 +89,54 @@
         <HasResources Value="True"/>
         <UnitName Value="code_frm"/>
       </Unit6>
+      <Unit7>
+        <Filename Value="..\SimbaLocal\Units\MMLCore\bitmaps.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="bitmaps"/>
+      </Unit7>
+      <Unit8>
+        <Filename Value="..\SimbaLocal\Units\Misc\bzip2.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="bzip2"/>
+      </Unit8>
+      <Unit9>
+        <Filename Value="..\SimbaLocal\Units\Misc\bzip2comn.pp"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="bzip2comn"/>
+      </Unit9>
+      <Unit10>
+        <Filename Value="..\SimbaLocal\Units\Misc\bzip2i386.inc"/>
+        <IsPartOfProject Value="True"/>
+      </Unit10>
+      <Unit11>
+        <Filename Value="..\SimbaLocal\Units\Misc\bzip2si386.inc"/>
+        <IsPartOfProject Value="True"/>
+      </Unit11>
+      <Unit12>
+        <Filename Value="..\SimbaLocal\Units\Misc\bzip2stream.pp"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="bzip2stream"/>
+      </Unit12>
+      <Unit13>
+        <Filename Value="..\SimbaLocal\Units\Misc\DCPCrypt\dcpbase64.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="dcpbase64"/>
+      </Unit13>
+      <Unit14>
+        <Filename Value="..\SimbaLocal\Units\Misc\DCPCrypt\DCPblockciphers.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="DCPblockciphers"/>
+      </Unit14>
+      <Unit15>
+        <Filename Value="..\SimbaLocal\Units\Misc\DCPCrypt\DCPconst.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="DCPconst"/>
+      </Unit15>
+      <Unit16>
+        <Filename Value="..\SimbaLocal\Units\Misc\DCPCrypt\DCPcrypt2.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="DCPcrypt2"/>
+      </Unit16>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -91,7 +146,8 @@
       <Filename Value="sps_path"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)"/>
+      <IncludeFiles Value="$(ProjOutDir);..\SimbaLocal\Units\Misc"/>
+      <OtherUnitFiles Value="..\SimbaLocal\Units\MMLCore;..\SimbaLocal\Units\Misc;..\SimbaLocal\Units\Misc\DCPCrypt"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <CodeGeneration>
