--- a/sps_path.lpi
+++ b/sps_path.lpi
@@ -32,7 +32,7 @@
     </RunParams>
     <RequiredPackages Count="6">
       <Item1>
-        <PackageName Value="bgracontrols"/>
+        <PackageName Value="GR32_L"/>
       </Item1>
       <Item2>
         <PackageName Value="lazmouseandkeyinput"/>
