--- a/sps_path.lpi
+++ b/sps_path.lpi
@@ -83,7 +83,9 @@
       <Unit6>
         <Filename Value="code_frm.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="CodeForm"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
         <UnitName Value="code_frm"/>
       </Unit6>
       <Unit7>
